feat: A mapping from our store abstractions to the current daml ledger API
feat: Swtich logging to logback and the log4j bridge

Signed-off-by: Ryan Roberts <ryan@blockchaintp.com>

feat: Tidy up coercion with bijections, logging experiments

Signed-off-by: Ryan Roberts <ryan@blockchaintp.com>

feat: S3 resource creation, various redesign

feat: Working, slowly, but working

Signed-off-by: Ryan Roberts <ryan@blockchaintp.com>

feat: Rework transaction read to use the daml API dispatcher

Some of this construction needs to be correctly deferred to outside of
the builders, ResourceOwner is quite an unpleasant type to use from Java
however

Signed-off-by: Ryan Roberts <ryan@blockchaintp.com>

feat: Dispatcher use

Signed-off-by: Ryan Roberts <ryan@blockchaintp.com>

feat: Caching in store builder, S3 conventions

Signed-off-by: Ryan Roberts <ryan@blockchaintp.com>

fix: Naming conventions in tests

Signed-off-by: Ryan Roberts <ryan@blockchaintp.com>

fix: Off by one paging..

Signed-off-by: Ryan Roberts <ryan@blockchaintp.com>

fix: New head signalling

Signed-off-by: Ryan Roberts <ryan@blockchaintp.com>

fix: Splitstore now in terms of bulk operations, much faster

Initial implementation was a little lazy, may need paging on the event()
side

Signed-off-by: Ryan Roberts <ryan@blockchaintp.com>

feat: Truncate long s3 keys to hashed/{SHA-512}

Signed-off-by: Ryan Roberts <ryan@blockchaintp.com>

fix: Correct readstate map access, various sonar bugs

Signed-off-by: Ryan Roberts <ryan@blockchaintp.com>

fix: Remove configuation overrides to fix ConfigManagementServiceIT

Signed-off-by: Ryan Roberts <ryan@blockchaintp.com>

feat: TxLog caching, various style fixes

Signed-off-by: Ryan Roberts <ryan@blockchaintp.com>